correct scrollbar settings

--- a/source/styles/blocks/body.scss
+++ b/source/styles/blocks/body.scss
@@ -56,28 +56,7 @@ html,
 body {
   /* «цвет ползунка» «цвет полосы скроллбара» */
   scrollbar-color: var(--color-accent) var(--color-background);
-  scrollbar-width: thin;
   scroll-behavior: smooth;
-}
-
-body::-webkit-scrollbar {
-  width: 15px;
-  height: 15px;
-  background-color: var(--color-background);
-}
-
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px color-opacity(var(--color-text-basic), 0.2);
-  background-color: var(--color-background);
-}
-
-body::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background-color: color-opacity(var(--color-accent), 0.5);
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  background-color: var(--color-accent);
 }
 
 body.modal-open {
