--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -35,7 +35,7 @@
 
   width: min-content;
   max-width: 100%;
-  height: 110px;
+  height: 130px;
 
   display: flex;
   justify-content: flex-start;
@@ -48,26 +48,6 @@
   list-style: none;
   padding: 0;
   padding-bottom: 25px;
-}
-
-.slider__previews::-webkit-scrollbar {
-  height: 10px;
-  background-color: var(--color-background);
-}
-
-.slider__previews::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px color-opacity(var(--color-text-basic), 0.2);
-  border-radius: 5px;
-  background-color: var(--color-background);
-}
-
-.slider__previews::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background-color: color-opacity(var(--color-accent), 0.5);
-}
-
-.slider__previews::-webkit-scrollbar-thumb:hover {
-  background-color: color-opacity(var(--color-accent), 1);
 }
 
 .slider__preview-item {
